jsx:className/style={{}} syntax

--- a/03.语法规则/jsx语法规则.html
+++ b/03.语法规则/jsx语法规则.html
@@ -39,7 +39,12 @@
 			        1.定义虚拟dom时，不要写引号
 			        2.标签中混入js表达式要用{}
 			        3.样式的类名指定不要用class,要用className
-			        4.内联样式，要用style={{key:value}}形式去写,外层{}代表js代码,内层代表obj对象
+                    4.内联样式，要用style={{key:value}}形式去写,外层{}代表js代码,内层代表obj对象
+                    5.VDOM必须只有一个root标签
+                    6.标签必须闭合
+                    7.标签首字母
+                        (1)若小写字母开头,则将该标签转为html同名元素，若html中无同名元素，则报错
+                        (2)若大写字母开头,react渲染对应的组件，若未定义，则报错
 			*/
 		</script>
 	</body>
