--- a/07.props/对props进行限制.html
+++ b/07.props/对props进行限制.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>props进行限制</title>
 	</head>
 	<body>
 		<div id="test1"></div>
@@ -16,6 +16,7 @@
 			src="../js/react-dom.development.js"
 		></script>
 		<script type="text/javascript" src="../js/babel.min.js"></script>
+		<script type="text/javascript" src="../js/prop-types.js"></script>
 		<script type="text/babel">
 			class Person extends React.Component {
 				render() {
@@ -29,12 +30,29 @@
 					);
 				}
 			}
-			const p1 = { name: "frank", sex: "男", age: 25 };
-			const p2 = { name: "jenny", sex: "女", age: 19 };
+			Person.propTypes = {
+				name: PropTypes.string.isRequired,
+				sex: PropTypes.string,
+				age: PropTypes.number,
+				speak: PropTypes.func,
+			};
+			Person.defaultProps = {
+				sex: "male",
+				age: 18,
+			};
+			const p1 = { name: "frank", sex: "男", age: 24 };
+			// const p2 = { name: "jenny", sex: "女", age: 19 };
 			const p3 = { name: "tom", sex: "男", age: 20 };
 
+			function speak() {
+				console.log("我说话了");
+			}
+
 			ReactDOM.render(<Person {...p1} />, document.getElementById("test1"));
-			ReactDOM.render(<Person {...p2} />, document.getElementById("test2"));
+			ReactDOM.render(
+				<Person name="jenny" speak={speak} />,
+				document.getElementById("test2")
+			);
 			ReactDOM.render(<Person {...p3} />, document.getElementById("test3"));
 		</script>
 	</body>
