--- a/09.react事件处理/事件处理.html
+++ b/09.react事件处理/事件处理.html
@@ -15,9 +15,14 @@
 		<script type="text/javascript" src="../js/babel.min.js"></script>
 		<script type="text/javascript" src="../js/prop-types.js"></script>
 		<script type="text/babel">
+			/*
+            (1)通过onXxx属性指定事件处理函数（首字母大写）
+                a.React使用的是自定义（合成）事件，而不是使用的原生DOM事件--为了更好的兼容性
+                b.React中的事件是通过 事件委托方式处理的（委托给组件最外层的元素）--为了更高效
+            (2)通过event.target得到发生事件的DOM元素对象---不要过度使用ref
+        */
 			class Demo extends React.Component {
 				myRef = React.createRef();
-				myRef2 = React.createRef();
 
 				showData = () => {
 					console.log(this.myRef.current.value);
