--- a/12.组件生命周期/2_react生命周期(旧).html
+++ b/12.组件生命周期/2_react生命周期(旧).html
@@ -32,7 +32,10 @@
 				death = () => {
 					ReactDOM.unmountComponentAtNode(document.getElementById("test"));
 				};
-
+				force = () => {
+					this.forceUpdate();
+					console.log("Sum-forceUpdated");
+				};
 				componentWillMount() {
 					console.log("Sum-componentWillMount");
 				}
@@ -62,6 +65,7 @@
 							<h2>当前求和为:{this.state.sum}</h2>
 							<button onClick={this.add}>点我+1</button>
 							<button onClick={this.death}>卸载组件</button>
+							<button onClick={this.force}>不更改数据，强制更新</button>
 						</div>
 					);
 				}
