新生命周期getDerivedStateFromProps

--- a/12.组件生命周期/2_react生命周期(旧).html
+++ b/12.组件生命周期/2_react生命周期(旧).html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>react生命周期</title>
+		<title>react生命周期(旧)</title>
 	</head>
 	<body>
 		<div id="test"></div>
